<resources>
    <string name="app_name">Dice App</string>
    <string name="fullname">FullName</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="femme">Femme</string>
    <string name="homme">Homme</string>
    <string name="skills">Skills</string>
    <string name="flutter">FLUTTER</string>
    <string name="ios">IOS</string>
    <string name="reset">RESET</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="hobbies">Hobbies</string>
</resources>