<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/account"
            app:tint="@color/colorSecondary" />

        <LinearLayout
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname" />

            <EditText
                android:id="@+id/ageField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/radios"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="26dp"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:layout_marginStart="30dp"
        />

        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:checked="true"
                android:text="@string/homme"
                android:textSize="22dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femme"
                android:textSize="22dp" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radios" />

    <LinearLayout
        android:id="@+id/skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/view2"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textSize="26dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        />

        <SeekBar
            android:id="@+id/seekAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ANDROID"
            android:textSize="22dp"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            />

        <SeekBar
            android:id="@+id/seekIos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ios"
            android:textSize="22dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            />

        <SeekBar
            android:id="@+id/seekFlutter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flutter"
            android:textSize="22sp"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/skills"
        tools:layout_editor_absoluteX="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.962"
        android:orientation="horizontal"
        android:gravity="center"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/reset" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reset"
            android:text="NEXT" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>